--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -38,7 +38,7 @@
       {{ if .Params.tags }}
       <div class="blog-tags">
         {{ range .Params.tags }}
-        <a href="{{ $.Site.LanguagePrefix | absURL }}/tags/{{ . | urlize }}/">{{ . }}</a>
+        <a href="{{ $.Site.LanguagePrefix | absURL }}{{ . | urlize }}/">{{ . }}</a>
         {{ end }}
       </div>
       {{ end }}
