--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -66,6 +66,16 @@
               </span>
             </a>
           </li>
+		  |
+		  <li>
+		    <a href="{{ "" | absLangURL }}sitemaps" title="HTML SiteMaps">
+            
+              <span class="mx-2">
+                <i class="bi bi-rss">HTML SiteMaps</i>
+              </span>
+            </a>
+          </li>
+		  
 		  
         </ul>
       </div>
